# thelazyone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/claude-code-mcp-server/: design.md  requirements.md  tasks.md
docs/: .gitkeep
scripts/: run-e2e-tests.sh
src/mcp_server/: __init__.py  cli.py  config.py  security.py  server.py
src/mcp_server/docker/: __init__.py  container_manager.py  controller.py  environment_setup.py
src/mcp_server/journal/: __init__.py  manager.py  models.py
src/mcp_server/llm/: __init__.py  models.py  providers.py  router.py
src/mcp_server/research/: __init__.py  context7_integration.py  engine.py  web_searcher.py
src/mcp_server/specs/: __init__.py  generators.py  manager.py  models.py
tests/: __init__.py  conftest.py
tests/compliance/: test_mcp_protocol.py
tests/e2e/: test_developer_workflows.py
tests/integration/: test_tools_end_to_end.py
tests/mocks/: __init__.py  docker_mocks.py  llm_mocks.py
tests/performance/: test_performance.py
